--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "TakuKobayashi",
   "private": true,
@@ -13,7 +13,10 @@
     "request": "*",
     "querystring": "*",
     "underscore": "*",
-    "underscore.string": "*"
+    "underscore.string": "*",
+    "dotenv": "*",
+    "express": "*",
+    "nodemon": "*"
   },
   "license": "MIT"
 }
