--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "spotgacha",
-  "version": "0.0.1",
-  "main": "index.js",
+  "name": "spotgacha2",
+  "version": "1.0.0",
+  "description": "Serverless webpack example using Typescript",
+  "main": "handler.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "TakuKobayashi",
-  "private": true,
   "dependencies": {
-    "@line/bot-sdk": "*",
-    "aws-sdk": "*",
-    "request": "*",
-    "querystring": "*",
-    "underscore": "*",
-    "underscore.string": "*",
-    "dotenv": "*",
-    "express": "*",
-    "nodemon": "*"
+    "@line/bot-sdk": "^6.8.2",
+    "source-map-support": "^0.5.10"
   },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.17",
+    "@types/node": "^10.12.18",
+    "serverless-webpack": "^5.2.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0"
+  },
+  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
 }
