--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^6.8.2",
+    "serverless-dotenv-plugin": "^2.1.1",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
-    "@types/node": "^10.12.18",
+    "@types/node": "^12.11.5",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
