--- a/serverless.yml
+++ b/serverless.yml
@@ -7,15 +7,26 @@ service:
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-dotenv-plugin
+
+custom:
+  dotenv:
+    path: ./.env
+    include:
+      - CHANNEL_ACCESS_TOKEN
+      - CHANNEL_SECRET
 
 provider:
   name: aws
   runtime: nodejs10.x
+  region: ap-northeast-1
 
 functions:
   hello:
-    handler: handler.hello
+    handler: handler.received
+    timeout: 900
     events:
       - http:
-          method: get
-          path: hello
+          method: post
+          path: received
+          cors: true
